charts/sessionspaces/test-policy/pod-securitycontext/resources_base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myspace
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: sessionspaces
  labels:
    app.kubernetes.io/managed-by: sessionspaces
data:
  data_directory: "/allowed/path"
  gid: "1234"
---
apiVersion: argoproj.io/v1alpha1
kind: Workflow
metadata:
  name: test-workflow
  namespace: myspace
  uid: abc1234
  labels:
    workflows.argoproj.io/creator-posix-uid: "36055"
spec: {}
